kubernetes/components/pgadmin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  selector:
    app.kubernetes.io/name: pgadmin
  ports:
    - name: http
      port: 80
      targetPort: http
